# GeldSteer

./: README.md
backend/: .gitignore  AGENTS.md  Cargo.toml  README.md  data.db  rustfmt.toml
backend/docs/: openapi.md  requirements.md  table-definition.md
backend/migrations/: 20260118064254_create_accounts_table.sql  20260118064732_create_catalog_table.sql  20260118065431_create_portfolio_table.sql
backend/src/: main.rs
backend/src/core/: database.rs  error.rs
backend/src/domains/: mod.rs
backend/src/domains/accounts/: handler.rs  mod.rs  model.rs  repository.rs  schema.rs  service.rs
backend/src/domains/catalog/: handler.rs  mod.rs  model.rs  repository.rs  schema.rs  service.rs
backend/src/domains/portfolio/: handler.rs  mod.rs  model.rs  repository.rs  schema.rs  service.rs
backend/src/middleware/: extractor.rs
backend/src/shared/: validation.rs
backend/src/shared/util/: mod.rs
