[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
nanoid = "0.4.0"
rust_decimal = { version = "1.40.0", features = ["serde", "db-diesel-mysql"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-native-tls", "rust_decimal", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
